--- a/SIMS/bin/SIMS.dll.config
+++ b/SIMS/bin/SIMS.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DBCS" connectionString="data source=.\SQLEXPRESS;database=SIMS;User ID=sa;Password=Tns$Gdb$000#;"
+    <add name="DBCS" connectionString="data source=.\SQLEXPRESS;database=SIMS;Integrated Security=SSPI;"
           providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
