--- a/SIMS/SIMS.csproj
+++ b/SIMS/SIMS.csproj
@@ -19,6 +19,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -70,6 +71,8 @@
     <Content Include="UI\Admin\AddStudentResult.aspx" />
     <Content Include="UI\Admin\AddStudentSession.aspx" />
     <Content Include="UI\Admin\Documentation.aspx" />
+    <Content Include="UI\Admin\GiveRegistrationPermission.aspx" />
+    <Content Include="UI\Admin\Login.aspx" />
     <Content Include="UI\Admin\MasterPageAdmin.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -106,6 +109,11 @@
     <Content Include="UI\Admin\ShowStudent.aspx" />
     <Content Include="UI\Admin\ShowStudentResult.aspx" />
     <Content Include="UI\Admin\ShowTeacher.aspx" />
+    <Content Include="UI\Student\BacklogRegistration.aspx" />
+    <Content Include="UI\Student\GraduationStatus.aspx" />
+    <Content Include="UI\Student\SemisterRegistration.aspx" />
+    <Content Include="UI\Student\StudentHome.aspx" />
+    <Content Include="UI\Student\StudentResult.aspx" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
   </ItemGroup>
@@ -120,6 +128,7 @@
     <Compile Include="DAL\Admin\AddNationalityDAL.cs" />
     <Compile Include="DAL\Admin\AddSessionDAL.cs" />
     <Compile Include="DAL\Admin\AddStudentDAL.cs" />
+    <Compile Include="DAL\Admin\TeacherDAL.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -129,9 +138,11 @@
     <Compile Include="Models\GenderModel.cs" />
     <Compile Include="Models\GeneratedStudentModel.cs" />
     <Compile Include="Models\NationalityModel.cs" />
+    <Compile Include="Models\RegistrationPermissionModel.cs" />
     <Compile Include="Models\SessionMedel.cs" />
     <Compile Include="Models\ShowAllDepartmentInformationModel.cs" />
     <Compile Include="Models\ShowStudentInformationModel.cs" />
+    <Compile Include="Models\TeacherModel.cs" />
     <Compile Include="Models\YearTermModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Admin\AddAdmin.aspx.cs">
@@ -218,12 +229,26 @@
     <Compile Include="UI\Admin\Documentation.aspx.designer.cs">
       <DependentUpon>Documentation.aspx</DependentUpon>
     </Compile>
+    <Compile Include="UI\Admin\GiveRegistrationPermission.aspx.cs">
+      <DependentUpon>GiveRegistrationPermission.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Admin\GiveRegistrationPermission.aspx.designer.cs">
+      <DependentUpon>GiveRegistrationPermission.aspx</DependentUpon>
+    </Compile>
     <Compile Include="UI\Admin\Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="UI\Admin\Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Admin\Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Admin\Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="UI\Admin\MasterPageAdmin.Master.cs">
       <DependentUpon>MasterPageAdmin.Master</DependentUpon>
@@ -260,12 +285,46 @@
     <Compile Include="UI\Admin\ShowTeacher.aspx.designer.cs">
       <DependentUpon>ShowTeacher.aspx</DependentUpon>
     </Compile>
+    <Compile Include="UI\Student\BacklogRegistration.aspx.cs">
+      <DependentUpon>BacklogRegistration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Student\BacklogRegistration.aspx.designer.cs">
+      <DependentUpon>BacklogRegistration.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Student\GraduationStatus.aspx.cs">
+      <DependentUpon>GraduationStatus.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Student\GraduationStatus.aspx.designer.cs">
+      <DependentUpon>GraduationStatus.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Student\SemisterRegistration.aspx.cs">
+      <DependentUpon>SemisterRegistration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Student\SemisterRegistration.aspx.designer.cs">
+      <DependentUpon>SemisterRegistration.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Student\StudentHome.aspx.cs">
+      <DependentUpon>StudentHome.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Student\StudentHome.aspx.designer.cs">
+      <DependentUpon>StudentHome.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Student\StudentResult.aspx.cs">
+      <DependentUpon>StudentResult.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Student\StudentResult.aspx.designer.cs">
+      <DependentUpon>StudentResult.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="BLL\Student\" />
     <Folder Include="DAL\Student\" />
-    <Folder Include="UI\Student\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
