--- a/SIMS/Web.config
+++ b/SIMS/Web.config
@@ -4,8 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
   <connectionStrings>
-    <add name="DBCS" connectionString="data source=.\SQLEXPRESS;database=SIMS;Integrated Security=SSPI;"
+    <add name="DBCS" connectionString="data source=.\SQLEXPRESS;database=SIMS;User ID=sa;Password=Tns$Gdb$000#;"
           providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
