--- a/SIMS/bin/SIMS.dll.config
+++ b/SIMS/bin/SIMS.dll.config
@@ -8,7 +8,7 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <connectionStrings>
-    <add name="DBCS" connectionString="data source=.\MSSQL;database=SIMS;Integrated Security=SSPI;"
+    <add name="DBCS" connectionString="data source=.\SQLEXPRESS;database=SIMS;User ID=sa;Password=Tns$Gdb$000#;"
           providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
